# qpy-upload_notifier

./: .gitignore  README.md  pyproject.toml  qpy_config.yml
python/qpy/upload_notifier/: __init__.py  form.py  question_type.py
templates/: feedback.xhtml.j2  formulation.xhtml.j2  retry_message.xhtml.j2
